# after-school-app

./: README.md
after-school-api/: .env  Cargo.toml
after-school-api/configs/: development.yaml  production.yaml
after-school-api/migrations/: 20250404034430_init_uuid_v7.sql  20250404034451_init_table.sql
after-school-api/src/: main.rs
after-school-api/src/db/: connection.rs  mod.rs
after-school-api/src/db/entities/: bulletin_board.rs  mod.rs  prelude.rs  student_grades.rs  students.rs  teachers.rs
after-school-api/src/migrations/: announcement.sql  attendance.sql  student.sql  student_grades.sql  teacher.sql
after-school-api/src/models/: attendance.rs  auth.rs  mod.rs  student.rs  student_grade.rs  teacher.rs
after-school-api/src/routes/: mod.rs  route.rs
after-school-api/src/services/: grades_service.rs  mod.rs  student_service.rs  teacher_service.rs
after-school-app/: Dockerfile  middleware.ts  next.config.ts  (+2 more)
api/: .env  Cargo.toml  script.ps1
api/configs/: development.yaml  production.yaml
api/migrations/: 20250405013228_init_table.sql
api/src/: config.rs  lib.rs  main.rs
api/src/db/: connection.rs  field.rs
api/src/db/entities/: announcements.rs  attendance_records.rs  attendance_students.rs  member_family_relations.rs  members.rs  mod.rs  prelude.rs  student_exams.rs  student_grades.rs  student_infos.rs  students.rs  teacher_assignments.rs  teachers.rs
api/src/models/: announcement.rs  common.rs  member.rs  mod.rs  student.rs  student_info.rs  teacher.rs
api/src/routes/: route.rs
api/src/services/: announcement_service.rs  attendance_service.rs  auth_service.rs  member_service.rs  mod.rs  prelude.rs  student_info_service.rs  student_service.rs  teacher_service.rs
api/src/util/: jwt.rs
(+92 files in other folders)
