[package]
name = "after-school-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-cookies = "0.10"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_yml = "0.0.12"
shellexpand = "3.1.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
bcrypt = "0.16.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.22"
validator = { version = "0.19.0", features = ["derive"] }
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v7"] }
tracing = "0.1.41"