[package]
name = "church-community-center-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3" }
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-cookies = "0.11"
jsonwebtoken = "9.3.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
shellexpand = "3.1.0"
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
bcrypt = "0.17.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.22"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
tracing = "0.1.41"